--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.4.17",
     "node-geocoder": "^3.25.0",
+    "nodemailer": "^6.4.14",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
